--- a/metadata.yaml
+++ b/metadata.yaml
@@ -19,6 +19,8 @@ language: fi
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Kantele II
 
   Taikka Suomen Kansan sekÃ¤ Wanhoja ettÃ¤ NykyisempiÃ¤ Runoja ja Lauluja'
